fix 404 page on mobile

--- a/_dev/scss/modules/_oneOffs.scss
+++ b/_dev/scss/modules/_oneOffs.scss
@@ -20,7 +20,8 @@
   }
 
   .fourohfour__content {
-    width: 420px;
+    width: 100%;
+    max-width: 420px;
     text-align: center;
     position: absolute;
     top: 50%;
